RESOLVED FIXED307712
Unified sources build fix
https://bugs.webkit.org/show_bug.cgi?id=307712
Summary Unified sources build fix
Aditya Keerthi
Reported 2026-02-12 15:16:14 PST
SSIA
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-12 15:17:19 PST
Aditya Keerthi
Comment 2 2026-02-12 15:23:21 PST
EWS
Comment 3 2026-02-12 15:25:27 PST
Committed 307410@main (2f8d91b5dcc7): <https://commits.webkit.org/307410@main> Reviewed commits have been landed. Closing PR #58553 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.